2007-04-04  David Bateman  <dbateman@free.fr>

	* dMatrix.cc (Matrix::inverse): If calc_cond is true, calculate
	the condition number for positive definite matrices.
	* CMatrix.cc (ComplexMatrix::inverse): Ditto.
	* dbleChol.h (CHOL(const Matrix&, bool)): New arg, calc_cond.
	(CHOL(const Matrix&, octave_idx_type&, bool): Ditto.
	(octave_idx_type init (const Matrix&, bool)): Ditto.
	(CHOL(const CHOL&)): Copy xrcond.
	(CHOL& operator = (const CHOL&)): Copy xrcond.
	(xrcond): New private data member.
	* CmplxCHOL.h (ComplexCHOL(const ComplexMatrix&, bool)): New arg,
	calc_cond.
	(ComplexCHOL(const ComplexMatrix&, octave_idx_type&, bool): Ditto
	(octave_idx_type init (const ComplexMatrix&, bool)): Ditto.
	(ComplexCHOL(const ComplexCHOL&)): Copy xrcond.
	(ComplexCHOL& operator = (const ComplexCHOL&)): Copy xrcond.
	(xrcond): New private data member.
	* dbleCHOL.cc (CHOL::init(const Matrix&, bool)): If calc_cond is
	true, calculate the condition number with dpocon.
	* CmplxCHOL.cc (ComplexCHOL::init(const ComplexMatrix&, bool)): If
	calc_cond is true, calculate the condition number with zpocon.

2007-04-03  John W. Eaton  <jwe@octave.org>

	* intNDArray.cc (intNDArray): Delete spurious semicolon.

	* CMatrix.cc (ComplexMatrix::tinverse): Use Array<T> and
	fortran_vec method instead of OCTAVE_LOCAL_BUFFER to avoid
	"maybe clobbered by vfork" warning.

	* Sparse-op-defs.h (SPARSE_CUMSUM): Add braces to avoid ambiguous
	if/else.

	* oct-spparms.h (octave_sparse_params): Define copy constructor
	and destructor.

	* Array.cc (assignN): Don't resize dimension if corresponding
	index is empty.

2007-04-02  John W. Eaton  <jwe@octave.org>

	* dMatrix.h (Matrix::inverse): Reinstate versions without
	MatrixType argument.
	* CMatrix.h (ComplexMatrix::inverse): Likewise.

2007-03-27  John W. Eaton  <jwe@octave.org>

	* Makefile.in (DISTDIRS): Delete variable.
	(dist): Delete action for DISTDIRS.  Use ln instead of $(LN_S).

2007-03-26  David Bateman <dbateman@free.fr>
